--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);"></div>
+    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(255, 255, 255);"></div>
 
     <div class="container align-center">
         <div class="row justify-content-md-center">
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/b">how to create your own site for free</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
