--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/k">how to develop own website</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
+<section class="engine"><a href="https://mobiri.se/n">free simple site templates</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
 
     
 
@@ -73,7 +73,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BpIPTA8ikgMN6B70n6C45wibFBYwqVZCwxRfbLxwe0S9Girl3uGgACcf/m5Szo9wes5RoM2IV+DhtWIT7+N4wwps38GDCyPhvA8fdr8B1gO5YBQCyk0orqpvQ7rG1bKq" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OfJUzMSyWeIFZM3tsBIrmByUR1h5UcuedQuRJ3+ymiRrcjEX3x7DPytkbHYEqncOGTvvMM99ZfSKMPx17sVzUdlwEb0j6o+gnEfxlTIA0zzZoSeEwwxSGHeif1t2Y6T6" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
