--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     Eastern Shore Democrats</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-1"><strong>Newsletter</strong></h3>
                 
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="meetinginfo.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>County Meetings &amp; Committee Officers</a>
-                    <a class="btn btn-md btn-primary display-7" href="elected.html"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Contact Your Elected Officials</a> <a class="btn btn-md btn-primary display-7" href="2018elections.html"><span class="mbri-image-slider mbr-iconfont mbr-iconfont-btn"></span>2018 Elections &amp; Videos</a> <a class="btn btn-md btn-secondary display-7" href="feedback.html"><span class="mbri-chat mbr-iconfont mbr-iconfont-btn"></span>Newsletter Feedback</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="meetinginfo.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>Meetings &amp; Committee Officers</a>
+                    <a class="btn btn-md btn-primary display-7" href="elected.html"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Contact Your Elected Officials</a> <a class="btn btn-md btn-primary display-7" href="2018elections.html"><span class="mbri-image-slider mbr-iconfont mbr-iconfont-btn"></span>2018 Elections &amp; Candidate Videos</a> <a class="btn btn-md btn-primary display-7" href="feedback.html"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Other Political Organizations</a></div>
             </div>
         </div>
     </div>
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/i">site creation software</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/w">html5 templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -128,13 +128,13 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="media-container-row">
                     <div class="card-img pr-2">
-                        <span class="mbri-star mbr-iconfont"></span>
+                        <span class="mbr-iconfont mbri-hearth"></span>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title py-3 mbr-fonts-style display-7"><strong>
                             Other Local Groups</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           If you belong to or represent any local organization that also has a political focus we would love to hear from you and will be happy to feature info about your group and what you do to further the political conversation. Working together to leverage our strengths and knowledge benefits everyone. We would be pleased to display links and contact info about your group. So please <a href="feedback.html">contact </a>us.&nbsp;Please work together with us. We want you! We want your skills, your expertise, your passion, and your commitment to help us turn Virginia blue! </p>
+                           If you belong to or represent any local organization that also has a political focus we would love to hear from you and will be happy to feature info about your group and what you do to further the political conversation. Working together to leverage our strengths and knowledge benefits everyone. <a href="page5.html">We would be pleased to display links and contact info</a> about your group. So please <a href="feedback.html">contact </a>us.&nbsp;Please work together with us. We want you! We want your skills, your expertise, your passion, and your commitment to help us turn Virginia blue! </p>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-7" href="https://drive.google.com/open?id=1uvzRXmTZYt0KHHPaLTyyKgwkAhjgDQDiAwr6Uu6HgRI" target="_blank"><span class="mbri-magic-stick mbr-iconfont mbr-iconfont-btn"></span>Newsletter Sign-up</a> <a class="btn btn-primary display-7" href="page5.html"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Political Links List</a> <a class="btn btn-primary display-7" href="https://drive.google.com/file/d/16bwrLsAie97mwbzfrIaV4_7Dg-Q-OV8X/view?usp=sharing" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Calendar of Events</a> <a class="btn btn-secondary display-7" href="https://drive.google.com/file/d/19LC0VoUV6Cuu7rhYktBVNK-JA3AmCxNW/view?usp=sharing" target="_blank"><span class="socicon socicon-younow mbr-iconfont mbr-iconfont-btn"></span>Join your County Committee</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-7" href="https://drive.google.com/open?id=1uvzRXmTZYt0KHHPaLTyyKgwkAhjgDQDiAwr6Uu6HgRI" target="_blank"><span class="mbri-magic-stick mbr-iconfont mbr-iconfont-btn"></span>Newsletter Sign-up</a> <a class="btn btn-secondary display-7" href="page5.html"><span class="mbri-chat mbr-iconfont mbr-iconfont-btn"></span>Newsletter Feedback Form</a> <a class="btn btn-secondary display-7" href="https://drive.google.com/file/d/16bwrLsAie97mwbzfrIaV4_7Dg-Q-OV8X/view?usp=sharing" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Calendar of Events</a> <a class="btn btn-secondary display-7" href="https://drive.google.com/file/d/19LC0VoUV6Cuu7rhYktBVNK-JA3AmCxNW/view?usp=sharing" target="_blank"><span class="socicon socicon-younow mbr-iconfont mbr-iconfont-btn"></span>Join your County Committee</a></div>
             </div>
         </div>
     </div>
