--- a/newsletter.html
+++ b/newsletter.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/s">free bootstrap themes</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobiri.se/v">html templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
